i18n missing fields update

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -15,6 +15,47 @@ formBox1=Personal Information
 formBox2=Other Information
 formBox3=Address Information
 formBox4=Contact Information
+tDialog=Additional Columns
+
+#Buttons
 btnSave=Save
 btnClearForm=Clear Form
 btnClearData=Clear Data
+btnCloseDialog=Close
+
+# Labels
+labelInputId=ID
+labelSlTypeDoc=Type Document
+labelInputNumberDoc=Number Document
+labelInputFName=First Name
+labelInputLName=Last Name
+labelDateBirth=Birth Date
+labelSlPlaceBirth=Place Birth
+labelSlNationality=Nationality
+labelSlGender=Gender
+labelSlCivilStatus=Civil Status
+labelSlCountry=Country
+labelSlProvince=Province
+labelSlRegion=Region
+inputAddress=Address
+inputPostalCode=Postal Code
+inputPhone=Phone Number
+inputEmail=Email
+
+#Columns
+cNumberDocument=Number Document
+cFullName=Full Name
+cBirthDate=Birth Date
+cPlaceBirth=Place Birth
+cNationality=Nationality
+cGender=Gender
+cCivilStatus=Civil Status
+cID=ID
+cEmail=Email
+cTypeDoc=Type Document
+cCountry=Country
+cProvince=Province
+cRegion=Region
+cAddress=Address
+cPostalCode=Postal Code
+cPhone=Phone Number
